--- a/src/main/resources/application-local.properties.example
+++ b/src/main/resources/application-local.properties.example
@@ -29,7 +29,7 @@ jwt.refresh-token-expiration=604800000
 
 # OAuth2 Google
 # 테스트용으로 웹 클라이언트 oauth를 적용함
-# todo: 앱 ID 발급 후 ios 클라이언트로 교체
+# todo: 안드로이드 클라이언트로 교체
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID:your-google-client-id}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET:your-google-client-secret}
 spring.security.oauth2.client.registration.google.scope=profile,email
